# H1-Book-Q4

./: README.md
Desktop/book/: .env.example  .gitignore  .vercelignore  ALL_PHASES_COMPLETE.md  CONTRIBUTING.md  DATABASE_INTEGRATION.md  DATABASE_SETUP.md  DEPLOYMENT_GUIDE.md  DEPLOY_NETLIFY.md  FEATURE_GUIDE.md  GENERATE_NOW.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PERMANENT_LINK.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  README.md  TESTING_GUIDES.md  fix_imports.py  netlify.toml  package.json  test_models.py  vercel.json  verify_setup.py
Desktop/book/.github/workflows/: ci.yml  deploy.yml
Desktop/book/agents/: __init__.py  pyproject.toml
Desktop/book/agents/content_generator/: booster_generator.py  chapter_generator.py  curriculum.py  llm_client.py  markdown_writer.py  prompts.py  quiz_generator.py  requirements.txt  summary_generator.py  token_tracker.py  validator.py
Desktop/book/backend/: alembic.ini  pyproject.toml  requirements.txt
Desktop/book/backend/alembic/: env.py
Desktop/book/scripts/: generate_boosters.py  generate_chapters.py  generate_quizzes.py  generate_single.py  generate_summaries.py  validate_constitution.py  validate_project.py
Desktop/book/specs/005-textbook-generation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
Desktop/book/website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
Desktop/book/website/docs/: chapter-01-physical-ai-intro.md  chapter-02-humanoid-robotics-fundamentals.md  chapter-03-sensors-perception.md  intro.md  (+5 more)
Desktop/first h1/: GEMINI.md
(+66 files in other folders)
